# blog

./: Cargo.toml  Dockerfile  fly.toml  requirements.txt  serve.py  train.rst
posts/: 20180606_two_out_of_five.html  20180606_two_out_of_five.md  20230109_the_sleeper_car.html  20260419_evaleval.html  train.rst
posts/drafts/: 20260419_diary.html
src/: counter.rs  main.rs  posts.rs  presence.rs  templates.rs
static/: cursor.js  style.css
templates/: base.html  index.html  post.html
