[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
maud = { version = "0.26", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
rocksdb = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"
chrono = "0.4"
